--- a/src/config/app_config.json
+++ b/src/config/app_config.json
@@ -16,12 +16,12 @@
     "ADS1115_SETTINGS": {
         "FAST_DATA_RATE": 860,
         "NORMAL_DATA_RATE": 128,
-        "INITIAL_READINGS": 1000,
+        "INITIAL_READINGS": 100,
         "MAX_READINGS": 1000
     },
     "VOLTAGE_SENSOR_SETTINGS": {
-        "WINDOW_SIZE": 100,        
-        "DEFAULT_THRESHOLD_DEVIATION": 1.5,
+        "WINDOW_SIZE": 40,        
+        "DEFAULT_THRESHOLD": 0.0182,
         "MAX_ERRORS": 10
     }
 }
